[gd_scene load_steps=12 format=2]

[ext_resource path="res://recursos/Icons/Antronomo.tscn" type="PackedScene" id=1]
[ext_resource path="res://recursos/Fonts/OpenSans100A.tres" type="DynamicFont" id=2]
[ext_resource path="res://Intro/Intro.gd" type="Script" id=3]
[ext_resource path="res://UI/GodotLogo.tscn" type="PackedScene" id=4]
[ext_resource path="res://recursos/Fonts/OpenSans25.tres" type="DynamicFont" id=5]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=6]
[ext_resource path="res://recursos/Fonts/OpenSans40.tres" type="DynamicFont" id=7]

[sub_resource type="Animation" id=2]
resource_name = "AnimIntro"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("AntroPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 3.5, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GodotPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AntroPanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GodotPanel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("GodotPanel/Ball")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 6.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_can_move"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GodotPanel/Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 5, 6, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "MovingGodotLogo"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("GodotPanel/GodotLogo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 664, 360 ), Vector2( 400, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GodotPanel/GodotLogo:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AntroPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AntroPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GodotPanel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GodotPanel/GodotLogo:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 664, 360 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GodotPanel/GodotLogo:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GodotPanel/Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 48.0
height = 264.0

[node name="Intro" type="Node"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 360.0 ],
"_edit_vertical_guides_": [ 641.0 ]
}

[node name="Fondo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "AnimIntro"
anims/AnimIntro = SubResource( 2 )
anims/MovingGodotLogo = SubResource( 4 )
anims/RESET = SubResource( 3 )

[node name="AntroPanel" type="Node2D" parent="."]

[node name="Label" type="Label" parent="AntroPanel"]
margin_left = 277.0
margin_top = 500.0
margin_right = 1003.0
margin_bottom = 638.0
custom_fonts/font = ExtResource( 2 )
text = " ANTRONOMO "

[node name="Antronomo" parent="AntroPanel" instance=ExtResource( 1 )]
position = Vector2( 639, 262 )
scale = Vector2( 0.5, 0.5 )

[node name="GodotPanel" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="GodotLogo" parent="GodotPanel" instance=ExtResource( 4 )]
position = Vector2( 664, 360 )

[node name="Area2D" type="StaticBody2D" parent="GodotPanel"]
position = Vector2( 504, 376 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GodotPanel/Area2D"]
shape = SubResource( 1 )

[node name="Ball" parent="GodotPanel" instance=ExtResource( 6 )]
position = Vector2( 96, 768 )

[node name="Label" type="Label" parent="GodotPanel"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 480.0
margin_top = 24.0
margin_right = 809.0
margin_bottom = 94.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = " MADE WITH "
align = 1
valign = 1

[node name="SkipLabel" type="Label" parent="."]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 180.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 5 )
text = "Pres enter
to skip..."

[node name="LaberHider" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="LaberHider" to="." method="_on_LaberHider_timeout"]

[editable path="GodotPanel/GodotLogo"]
